# TUM-NLP-Praktikum

./: .gitignore  Addition_Australia_data_small_use_case_3_hire_employee.xlsx  Dockerfile_backend  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
data/: 1_Matching_Labels.csv  2_Matching_Labels.csv  Addition_Australia_data_small_use_case_3_hire_employee.xlsx  hiring_employee.csv
data/evaluation/: gold_standard.csv  gold_standard_preprocessed.csv  gold_standard_subset.csv
data/interim/: GPT_5.csv  GPT_6.csv  SM2_1.csv  SM2_2.csv  davinci_fine_tuning_results.csv  gpt_fine_tuning_results.csv  hiring_employee_labels.csv  know_your_customer_labels.csv  travel_insurance_claim_Labels.csv
data/processed/: final_labels_with_description.csv  final_labels_with_description.xlsx  training_data_preprocessed.csv
data/raw/: Australia_Use_Cases.xlsx  Use_Case_Data(2).xlsx  Use_Case_Data_With_All_Proccesses.xlsx
docs/: index.rst
frontend/: Dockerfile  requirements.txt  streamlit_app.py
models/bert/: BernoulliNB.pkl  DecisionTreeClassifier.pkl  GaussianNB.pkl  GradientBoostingClassifier.pkl  Logistic_Regression.pkl  Perceptron.pkl  RandomForestClassifier.pkl  SGDClassifier.pkl  SVC.pkl
models/ft/: BernoulliNB.pkl  DecisionTreeClassifier.pkl  GaussianNB.pkl  GradientBoostingClassifier.pkl  Logistic_Regression.pkl  Perceptron.pkl  RandomForestClassifier.pkl  SGDClassifier.pkl  SVC.pkl
models/glove/: BernoulliNB.pkl  DecisionTreeClassifier.pkl  GaussianNB.pkl  GradientBoostingClassifier.pkl  Logistic_Regression.pkl  Perceptron.pkl  RandomForestClassifier.pkl  SGDClassifier.pkl  SVC.pkl
notebooks/: comparing_results.ipynb  fine_tuning.ipynb
references/: model_evaluation_results_0102-2015.csv
src/: dataprep.py  main.py
tum-nlp-praktikum/: Makefile  requirements.txt
(+661 files in other folders)
