[tool.poetry]
name = "tum-nlp-praktikum"
version = "0.1.0"
description = "NLP task for clasifying legal text based on a process description"
authors = ["Patrick Ahrend <patrickahrend@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^2.5.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"
black = "^23.12.1"
spacy = "^3.7.2"
nltk = "^3.8.1"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.1.2-cp39-none-macosx_10_9_x86_64.whl" }
joblib = "^1.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


