[tool.poetry]
name = "tum-nlp-praktikum"
version = "0.1.0"
description = "NLP task for clasifying legal text based on a process description"
authors = ["Patrick Ahrend <patrickahrend@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.6,<3.9.7 || >3.9.7,<3.10.0"
cookiecutter = "^2.5.0"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"
black = "^23.12.1"
spacy = "^3.7.2"
nltk = "^3.8.1"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.1.2-cp39-none-macosx_10_9_x86_64.whl" }
joblib = "^1.3.2"
gensim = "^4.3.2"
transformers = "^4.36.2"
openai = "^1.6.1"
lightgbm = "^4.2.0"
lazypredict = "^0.2.12"
fastapi = "^0.108.0"
requests = "^2.31.0"
uvicorn = "^0.25.0"
streamlit = "^1.30.0"
umap-learn = { version = "^0.5.5", extras = ["plot"] }
matplotlib = "^3.3.4"
datashader = "^0.12.1"
bokeh = "^2.3.2"
holoviews = "^1.14.3"
scikit-image = "0.22.0"
colorcet = "^2.0.6"
numba = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

